# exploring_hasura_postgres

./: .env  Cargo.toml  README.md  docker-compose.yml  init.sql
auth_server/: app.js  package-lock.json  package.json
mutations/: create_store.graphql  login.graphql  update_item_store.graphql
queries/: list_all_items.graphql  list_stores.graphql  schema.json
src/: main.rs
